# omni-kernel

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE.txt  README.md  ROLLBACK.md
.github/workflows/: ci.yml  package.yml  pages.yml
configs/: systemd.service
docs/: index.html
ebpf/: omnikernel_lsm.bpf.c
scripts/: build-ebpf.sh  package-release.sh
src/: config.rs  license.rs  main.rs
src/security/: alerts.rs  ebpf.rs  maps.rs  mod.rs
src/wasm/: runtime.rs
