[package]
name = "omnikernel-agent"
version = "1.0.0"
edition = "2021"
license = "OmniKernel-Enterprise-1.0"
authors = ["Shashi Pal"]
description = "Enterprise-grade Rust + eBPF + Wasmtime host security subsystem"
repository = "https://github.com/devopsgeek1979/terraform-basic"

[package.metadata.release]
package_name = "omnikernel-agent"
artifact_prefix = "omnikernel-agent-linux-x86_64"

[[bin]]
name = "omnikernel-agent"
path = "src/main.rs"

[[bin]]
name = "gen_license"
path = "src/bin/gen_license.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "25"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
